--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<h1>National Storm Basketball</h1>
 <div>
 <ul id = "navbar">
-	<a href ="home.html" > Home</a>
+	<a href ="index.html" > Home</a>
 	<a href = "AboutTeam.html"> About team </a> 
 	<a href = " Location.html"> Location</a>
 	<a href = " program.html"> Program Info</a>
@@ -23,7 +23,7 @@
 </div>
 <footer>
 	<ul id = "footer">
-	<a href ="home.html" > Home</a>
+	<a href ="index.html" > Home</a>
 	<a href = "AboutTeam.html"> About team </a> 
 	<a href = " Location.html"> Location</a>
 	<a href = " program.html"> Program Info</a>
