--- a/AboutTeam.html
+++ b/AboutTeam.html
@@ -3,7 +3,7 @@
 <h1> About our Team </h1>
 <nav>
 <ul id = "navbar">
-	<a href ="home.html" > Home</a>
+	<a href ="index.html" > Home</a>
 	<a href = "AboutTeam.html"> About team </a> 
 	<a href = " Location.html"> Location</a>
 	<a href = " program.html"> Program Info</a>
@@ -22,7 +22,7 @@
     </div>
  <footer>
 	<ul id = "footer">
-	<a href ="home.html" > Home</a>
+	<a href ="index.html" > Home</a>
 	<a href = "AboutTeam.html"> About team </a> 
 	<a href = " Location.html"> Location</a>
 	<a href = " program.html"> Program Info</a>
