--- a/Location.html
+++ b/Location.html
@@ -6,7 +6,7 @@
 		<h1>Location</h1>
 <nav>
 <ul id ="navbar">
-	<a href ="home.html" > Home</a>
+	<a href ="index.html" > Home</a>
 	<a href = "AboutTeam.html"> About team </a> 
 	<a href = " Location.html"> Location</a>
 	<a href = "program.html"> Program Info</a>
@@ -17,7 +17,7 @@
 <img src = "practice1.jpg" alt ="alternate text" class ="center" >
 <footer>
 	<ul id = "footer">
-	<a href ="home.html" > Home</a>
+	<a href ="index.html" > Home</a>
 	<a href = "AboutTeam.html"> About team </a> 
 	<a href = " Location.html"> Location</a>
 	<a href = " program.html"> Program Info</a>
