--- a/payment.html
+++ b/payment.html
@@ -4,7 +4,7 @@
 	<h1>Payment</h1>
 	<div>
 <ul id ="navbar">
-	<a href ="home.html" > Home</a>
+	<a href ="index.html" > Home</a>
 	<a href = "AboutTeam.html"> About team </a> 
 	<a href = " Location.html"> Location</a>
 	<a href = "program.html"> Program Info</a>
