--- a/program.html
+++ b/program.html
@@ -6,7 +6,7 @@
 		<h1>Program Info</h1>
 <nav>
 <ul id ="navbar">
-	<a href ="home.html" > Home</a>
+	<a href ="index.html" > Home</a>
 	<a href = "AboutTeam.html"> About team </a> 
 	<a href = " Location.html"> Location</a>
 	<a href = "program.html"> Program Info</a>
@@ -31,7 +31,7 @@
 </body>
 <footer>
 	<ul id = "footer">
-	<a href ="home.html" > Home</a>
+	<a href ="index.html" > Home</a>
 	<a href = "AboutTeam.html"> About team </a> 
 	<a href = " Location.html"> Location</a>
 	<a href = " program.html"> Program Info</a>
