--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <p> We are a JV and Varsity Boy's AAU Basketball team based out of Scottsdale in Arizona.<span style="color:red;"> </p>
 </div>
 <div>
-<img src = "teamseason.jpg" alt ="alternate text" ><img src = "rebounding.jpg" alt ="alternate text" >
+<img src = "teamseason.jpg" alt ="alternate text" ><img src = "rebounding.JPG" alt ="alternate text" >
 </div>
 <footer>
 	<ul id = "footer">
