--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <div>
 <img src = "teamseason.jpg" alt ="alternate text" ><img src = "rebounding.JPG" alt ="alternate text" >
 </div>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <footer>
 	<ul id = "footer">
 	<a href ="index.html" > Home</a>
