--- a/payment.html
+++ b/payment.html
@@ -52,7 +52,7 @@
 <link type =" text/css" rel= "stylesheet" href="style.css"/>
 <link type =" text/css" rel= "stylesheet" href="form.css"/>
 <link type =" text/js" rel= "javascript" href="form.js"/>
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </body>
 			
 			</html>
