--- a/program.html
+++ b/program.html
@@ -28,6 +28,7 @@
 </ul>
 
 <img src = "amit.jpg" alt="alternate text" class="center"/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </body>
 <footer>
 	<ul id = "footer">
