--- a/program.html
+++ b/program.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
 
 <body>
 		<h1>Program Info</h1>
@@ -28,7 +30,6 @@
 </ul>
 
 <img src = "amit.jpg" alt="alternate text" class="center"/>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </body>
 <footer>
 	<ul id = "footer">
