--- a/Location.html
+++ b/Location.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
 
 <body>
 		<h1>Location</h1>
@@ -15,7 +17,6 @@
 </nav>
 <p class="c"> We practice in North Scottsdale which is a suburb of Phoenix in the state of Arizona.</br> </p>
 <img src = "practice1.jpg" alt ="alternate text" class ="center" >
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <footer>
 	<ul id = "footer">
 	<a href ="index.html" > Home</a>
