--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <!DOCTYPE html>
 <html>
-
-
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
 <body>
 		<h1>National Storm Basketball</h1>
 <div>
@@ -21,7 +22,6 @@
 <div>
 <img src = "teamseason.jpg" alt ="alternate text" ><img src = "rebounding.JPG" alt ="alternate text" >
 </div>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <footer>
 	<ul id = "footer">
 	<a href ="index.html" > Home</a>
