--- a/payment.html
+++ b/payment.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
 <body>
 	<h1>Payment</h1>
 	<div>
@@ -52,7 +55,6 @@
 <link type =" text/css" rel= "stylesheet" href="style.css"/>
 <link type =" text/css" rel= "stylesheet" href="form.css"/>
 <link type =" text/js" rel= "javascript" href="form.js"/>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </body>
 			
 			</html>
