--- a/index.html
+++ b/index.html
@@ -14,12 +14,18 @@
 	<a href = " payment.html"> Payment</a>
 </ul>
 </div>
-
-<div>
+<div class = "p">
 <p> We are a JV and Varsity Boy's AAU Basketball team based out of Scottsdale in Arizona.<span style="color:red;"> </p>
 </div>
-<div>
-<img src = "teamseason.jpg" alt ="alternate text" ><img src = "rebounding.JPG" alt ="alternate text" >
+<div class = "pa">
+<img src = "teamseason.jpg" alt ="alternate text" >
+<img src = "rebounding.JPG" alt ="alternate text" >
+</div>
+<p class="p">
+	We compete at local AAU highly competitive tournaments at Inspire Courts and PHX IS RISING
+</p>
+<div class="pa">
+<img src = "inspireq.jpg" alt ="alternate text" >
 </div>
 <footer>
 	<ul id = "footer">
