--- a/AboutTeam.html
+++ b/AboutTeam.html
@@ -20,6 +20,9 @@
          <p id ="about">This is a high school elite AAU Basketball club that is looking for qualified players who want to play in competitive tournaments. We have one team that competes in the Junior Varsity and Varsity division in local tournaments such as at Inspire, West Coast Elite Basketball and PHX is Rising.We practice in North Scottsdale on Mondays every week from 8pm to 10pm. </p>
         </div>
     </div>
+<div class="pa">
+     <img src =  "practicearjun.jpg"  alt ="alternate text" >
+ </div>
  <footer>
 	<ul id = "footer">
 	<a href ="index.html" > Home</a>
