--- a/program.html
+++ b/program.html
@@ -26,6 +26,7 @@
 </ul>
 
 <img src = "amit.jpg" alt="alternate text" class="center"/>
+<img src = "game.jpg" alt="alternate text" class="center"/>
 </body>
 <footer>
 	<ul id = "footer">
