--- a/Location.html
+++ b/Location.html
@@ -13,7 +13,25 @@
 </ul>
 </nav>
 <p class="c"> We practice in North Scottsdale which is a suburb of Phoenix in the state of Arizona.</br> </p>
-<img src = "practice1.jpg" alt ="alternate text" class ="center" >
+<div class="pa">
+<img src = "practice1.jpg" alt ="alternate text" >
+</div>
+<p class="p">
+  For the fall season, we will be competing at local tournaments in the valley such as the ones at Inspire Courts and PHX IS RISING.
+  <br> Down below in the image you can see us competing at one of the local tournaments in our spring season.</br>
+</p>
+<div class="pa">
+<img src = "competing.jpg" alt ="alternate text" >
+</div>
+<p class="p">
+  If you need a ride to some of the games, that can be arranged for you.<br> Just let us know</br>
+</p>
+<div class="pa">
+<img src = "fcoach.jpg" alt ="alternate text" >
+</div>
+<p class="p">
+  This team has strong chemistry and all of the players are respectful and are team players.
+</p>
 <footer>
 	<ul id = "footer">
 	<a href ="index.html" > Home</a>
