--- a/Location.html
+++ b/Location.html
@@ -21,13 +21,13 @@
   <br> Down below in the image you can see us competing at one of the local tournaments in our spring season.</br>
 </p>
 <div class="pa">
-<img src = "competing.jpg" alt ="alternate text" >
+<img src = "competing.JPG" alt ="alternate text" >
 </div>
 <p class="p">
   If you need a ride to some of the games, that can be arranged for you.<br> Just let us know</br>
 </p>
 <div class="pa">
-<img src = "fcoach.jpg" alt ="alternate text" >
+<img src = "fcoach.JPG" alt ="alternate text" >
 </div>
 <p class="p">
   This team has strong chemistry and all of the players are respectful and are team players.
