--- a/payment.html
+++ b/payment.html
@@ -12,42 +12,20 @@
 </ul>
 </div>
 <h2>Register for the season by clicking on the pay-pal button and paying there.</h2>
- <div id="smart-button-container">
-      <div style="text-align: center;">
-        <div id="paypal-button-container"></div>
-      </div>
-    </div>
-  <script src="https://www.paypal.com/sdk/js?client-id=sb&currency=USD" data-sdk-integration-source="button-factory"></script>
-  <script>
-    function initPayPalButton() {
-      paypal.Buttons({
-        style: {
-          shape: 'pill',
-          color: 'gold',
-          layout: 'vertical',
-          label: 'paypal',
-          
-        },
+ <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+<input type="hidden" name="cmd" value="_s-xclick">
+<input type="hidden" name="hosted_button_id" value="KST48FDBFW72S">
+<table>
+<tr><td><input type="hidden" name="on0" value="Item Select">Item Select</td></tr><tr><td><select name="os0">
+	<option value="Registration Fees">Registration Fees $225.00 USD</option>
+	<option value="Test">Test $5.00 USD</option>
+</select> </td></tr>
+</table>
+<input type="hidden" name="currency_code" value="USD">
+<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+</form>
 
-        createOrder: function(data, actions) {
-          return actions.order.create({
-            purchase_units: [{"description":"Registration for team and Tournament fees","amount":{"currency_code":"USD","value":225}}]
-          });
-        },
-
-        onApprove: function(data, actions) {
-          return actions.order.capture().then(function(details) {
-            alert('Transaction completed by ' + details.payer.name.given_name + '!');
-          });
-        },
-
-        onError: function(err) {
-          console.log(err);
-        }
-      }).render('#paypal-button-container');
-    }
-    initPayPalButton();
-  </script>
 <link type =" text/css" rel= "stylesheet" href="bert.css"/>
 <link type =" text/css" rel= "stylesheet" href="style.css"/>
 <link type =" text/css" rel= "stylesheet" href="form.css"/>
