--- a/program.html
+++ b/program.html
@@ -11,15 +11,15 @@
 	<a href = "payment.html"> Payment</a>
 </ul>
 </nav>
-<h2 class="c"> Our Fall Season </h2>
+<h2 class="c"> Our Season </h2>
 <ul class ="c">
 <li> Dates</li>
-<p> Our Fall Season starts on August 23rd and ends on October 18th.
+<p> Our Season starts on November 14th and ends on March 11th.
 <li> Price</li>
 <p>The total price for the season is 225$.<br> If you want to keep the jersey at the end of the season, the total price will be 250$.</br></p>
 <li> What's included in the price</li>
 <p> Registration in at least 3 local tournaments in the valley, offered by West Coast Elite AAU Basketball, PHX IS RISING and Inspire Courts.
-<br> Admittance to group practices every Monday from 8pm to 10 pm.</br>
+<br> Admittance to group practices on Sundays from 7pm to 9pm.</br>
 </p>
 <li> Price Breakdown</li>
 <p> We are charging 225$ for the season because registration for each tournament costs 350$.</p>
