--- a/AboutTeam.html
+++ b/AboutTeam.html
@@ -17,7 +17,7 @@
         <p id ="about"> Hi, my name is Arjun Gupta and I am the founder and team captain of the National Storm Basketball AAU Club.I founded this club after realizing that there was a shortage of high school AAU basketball clubs in the valley. I am a rising junior who has a deep passion and knowledge of the game.<br> My email is arjungupta9699@gmail.com.</br>  </p>
          <h2> About us</h2>
          <img src =  "ab.jpeg"  alt ="alternate text" >
-         <p id ="about">This is a high school elite AAU Basketball club that is looking for qualified players who want to play in competitive tournaments. We have one team that competes in the Junior Varsity and Varsity division in local tournaments such as at Inspire, West Coast Elite Basketball and PHX is Rising.We practice in North Scottsdale on Mondays every week from 8pm to 10pm. </p>
+         <p id ="about">This is a high school elite AAU Basketball club that is looking for qualified players who want to play in competitive tournaments. We have one team that competes in the Junior Varsity and Varsity division in local tournaments such as at Inspire, West Coast Elite Basketball and PHX is Rising.We practice in North Scottsdale on Sundays twice a month from 7pm to 9pm. </p>
         </div>
     </div>
 <div class="pa">
