--- a/AboutTeam.html
+++ b/AboutTeam.html
@@ -21,7 +21,7 @@
         </div>
     </div>
 <div class="pa">
-     <img src =  "practicearjun.jpg"  alt ="alternate text" >
+     <img src =  "Practice winter.jpg"  alt ="alternate text" >
  </div>
  <footer>
 	<ul id = "footer">
