--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	We compete at local AAU highly competitive tournaments at Inspire Courts and PHX IS RISING
 </p>
 <div class="pa">
-<img src = "inspireq.jpg" alt ="alternate text" >
+<img src = "tourney1fall.jpg" alt ="alternate text" >
 </div>
 <footer>
 	<ul id = "footer">
